--- a/src/components/pages/Desktop/Template/styles.module.scss
+++ b/src/components/pages/Desktop/Template/styles.module.scss
@@ -3,7 +3,8 @@
 
 .template {
   background-image: url("https://framerusercontent.com/images/8bKKgoZVqgsfLRek309Lmht8M.jpg?scale-down-to=2048");
-  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
   background-color: var(--primary-black);
   display: flex;
   min-height: 100vh;
@@ -12,17 +13,21 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-}
 
+}
+.container {
+  max-width: 1800px !important;
+}
 .content {
-  margin: 100px 0;
+  margin: 100px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 94px;
   h1 {
-    font-size: 92px !important;
+    font-size: 120px !important;
     font-weight: 500 !important;
+    font-family: var(--font-body) !important;
   }
   @include media-breakpoint-down(xl) {
     h1 {
@@ -46,9 +51,15 @@
 }
 
 .description {
-  font-size: 40px !important;
+  font-size: 29px !important;
   font-weight: 300 !important;
+  font-family: var(--font-body) !important;
+  line-height: 140%;
+  max-width: 928px;
   opacity: 0.8;
+  @include media-breakpoint-down(xl) {
+    max-width: 600px;
+  }
   @include media-breakpoint-down(md) {
     max-width: 280px;
     padding-bottom: 20px;
@@ -64,4 +75,11 @@
   @include media-breakpoint-down(md) {
     gap: 30px;
   }
+}
+
+.text {
+  font-size: 120px !important;
+  font-weight: 500 !important;
+  font-family: var(--font-body) !important;
+  max-width: 1800px;
 }
