--- a/src/components/pages/Home/BlackBoxes/styles.module.scss
+++ b/src/components/pages/Home/BlackBoxes/styles.module.scss
@@ -1,5 +1,5 @@
-@import "/src/styles/variables";
-@import "~bootstrap/scss/mixins";
+@import '/src/styles/variables';
+@import '~bootstrap/scss/mixins';
 
 .container {
   width: 100%;
@@ -32,6 +32,7 @@
   gap: 16px;
   align-items: center;
   justify-content: center;
+  width: 100%;
   @include media-breakpoint-down(xl) {
     flex-direction: column;
   }
@@ -39,8 +40,10 @@
 
 .boxWrapper {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   gap: 24px;
+  width: 100%;
+  max-width: 416px;
   @include media-breakpoint-down(xl) {
     align-items: center;
   }
@@ -49,38 +52,85 @@
 .box {
   max-width: 416px;
   min-width: 355px;
-  width: 100%;
+  width: 100% !important;
   height: 416px;
   flex-shrink: 0;
   border-radius: 24px;
   position: relative;
 
   &_first {
-    background-image: url("/images/box1.png");
-    background-size: cover;
-    background-position: center;
+    box-shadow: 0px 8.014px 48.082px -14.024px #34d399 inset;
   }
   &_second {
-    background-image: url("/images/box2.png");
-    background-size: cover;
-    background-position: center;
+    box-shadow: 0px 8.014px 48.082px -14.024px var(--purple-purple-600, #c084fc) inset;
   }
   &_third {
-    background-image: url("/images/box3.png");
-    background-size: cover;
-    background-position: center;
+    box-shadow: 0px 8.014px 48.082px -14.024px var(--Holo-Frost, #98f4fe) inset;
+  }
+}
+
+.settings {
+  &_boxBorder {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 24px;
+    border-bottom: none;
+    &__first {
+      border: 2px solid #34d399;
+    }
+    &__second {
+      border: 2px solid #c084fc;
+    }
+    &__third {
+      border: 2px solid #98F4FE;
+    }
+  }
+
+  &_boxMask {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    background: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 10%, rgba(0, 0, 0, 0) 100%);
+    pointer-events: none;
+  }
+
+  &_cornerCover {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    background: #000;
+    pointer-events: none;
+  }
+
+  &_bottomLeft {
+    bottom: 0;
+    left: 0;
+    border-top-right-radius: 24px;
+  }
+
+  &_bottomRight {
+    bottom: 0;
+    right: 0;
+    border-top-left-radius: 24px;
   }
 }
 
 .grid {
   background-size: cover;
   background-position: center;
-  background-image: url("/images/grid.png");
+  background-image: url('/images/grid.png');
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  z-index: 10;
 }
 
 .model {
@@ -102,13 +152,7 @@
 .sliderHandle {
   width: 2px;
   height: 100%;
-  background: linear-gradient(
-    to bottom,
-    transparent 0%,
-    var(--interface-dark-gray-125) 15%,
-    var(--interface-dark-gray-125) 85%,
-    transparent 100%
-  );
+  background: linear-gradient(to bottom, transparent 0%, var(--interface-dark-gray-125) 15%, var(--interface-dark-gray-125) 85%, transparent 100%);
   position: relative;
   &_image {
     position: absolute;
