--- a/src/components/pages/Home/BlackBoxes/Crousal/styles.module.scss
+++ b/src/components/pages/Home/BlackBoxes/Crousal/styles.module.scss
@@ -1,3 +1,6 @@
+@import '/src/styles/variables';
+@import '~bootstrap/scss/mixins';
+
 .carouselContainer {
   display: flex;
   flex-direction: column;
@@ -5,7 +8,10 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  gap: 40px;
+  gap: 20px;
+  @include media-breakpoint-down(xl) {
+    gap: 40px;
+  }
 }
 
 .button {
