[WIP] Added dynamic page based on sanity content

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -5,6 +5,7 @@ main.layout {
 }
 body:has(.layout) {
   background-color: var(--primary-black);
+  color: var(--primary-white);
 }
 
 .container-wide {
