Fix overflow-y: scroll causing right-side white margin on template layout

--- a/src/components/pages/Desktop/Template/styles.module.scss
+++ b/src/components/pages/Desktop/Template/styles.module.scss
@@ -9,7 +9,7 @@
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
