--- a/src/components/pages/DesktopForm/Template/styles.module.scss
+++ b/src/components/pages/DesktopForm/Template/styles.module.scss
@@ -10,7 +10,7 @@
   width: 100%;
   flex-direction: column;
   gap: 60px;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-size: cover; 
   background-position: center;
   background-attachment: fixed;
