--- a/src/components/pages/Home/GetStarted/styles.module.scss
+++ b/src/components/pages/Home/GetStarted/styles.module.scss
@@ -2,68 +2,73 @@
 @import "~bootstrap/scss/mixins";
 
 .get_started {
-    color: var(--primary-white);
-    position: relative;
-    width: 100%;
-    height: auto;
-    z-index: 0;
-    min-height: 700px;
+  color: var(--primary-white);
+  position: relative;
+  width: 100%;
+  height: auto;
+  z-index: 0;
+  min-height: 700px;
 
-    .gradient-overlay {
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
+  .gradient-overlay {
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
+  }
 }
 .container {
-    position: relative;
-    z-index: 1;
+  position: relative;
+  z-index: 1;
 
-&_content 
-    {
+  &_content {
     min-height: 700px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: var(--spacer-3);
     flex-direction: column;
-}
-    &_title {
-        font-family: var(--font-body);
-        font-size: 72px;
-        font-weight: 500;
-        line-height: 100%; 
-        letter-spacing: -0.72px;
-        text-align: center;
-        @include media-breakpoint-down(lg) {
-            font-size: 48px;
-          }
-
+  }
+  &_title {
+    font-family: var(--font-body);
+    font-size: 72px;
+    font-weight: 500;
+    line-height: 100%;
+    letter-spacing: -0.72px;
+    text-align: center;
+    @include media-breakpoint-down(lg) {
+      font-size: 48px;
     }
-        &_description {
-        font-family: var(--font-body);
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: 140%;
-        opacity: 0.8;
-        max-width: 632px;
-        text-align: center;
-        @include media-breakpoint-down(lg) {
-            font-size: 16px;
-          }
-        }
+  }
+  &_description {
+    font-family: var(--font-body);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 140%;
+    opacity: 0.8;
+    max-width: 632px;
+    text-align: center;
+    @include media-breakpoint-down(lg) {
+      font-size: 16px;
+    }
+  }
 }
 .button_group {
-    display: flex;
-    gap: var(--spacer-2);
-    margin-top: 40px;
+  display: flex;
+  gap: var(--spacer-2);
+  margin-top: 40px;
+
+  a {
     @include media-breakpoint-down(md) {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
+      width: 100%;
     }
+  }
+
+  @include media-breakpoint-down(md) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
 }
