--- a/src/components/ui/text/styles.module.scss
+++ b/src/components/ui/text/styles.module.scss
@@ -54,7 +54,7 @@ $mobile-sizes: (
 
 .text {
   color: inherit;
-  font-family: var(--2023-font-body);
+  font-family: var(--font-body);
   margin-bottom: 0;
   scroll-margin-top: calc(var(--header-height) + var(--announcement-height));
 
@@ -137,11 +137,11 @@ $mobile-sizes: (
   // font
 
   &--inter {
-    font-family: var(--2023-font-inter);
+    font-family: var(--font-inter);
   }
 
   &--chivo {
-    font-family: var(--2023-font-chivo);
+    font-family: var(--font-chivo);
   }
 
   // Weights
