--- a/src/components/ui/footer/styles.module.scss
+++ b/src/components/ui/footer/styles.module.scss
@@ -1,5 +1,5 @@
-@import "/src/styles/variables";
-@import "~bootstrap/scss/mixins";
+@import '/src/styles/variables';
+@import '~bootstrap/scss/mixins';
 
 .footer {
   background: #000;
@@ -11,6 +11,10 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
+  @include media-breakpoint-down(sm) {
+    flex-direction: column-reverse;
+    gap: 20px;
+  }
 }
 
 .innerContainer {
