--- a/src/styles/_mkto.scss
+++ b/src/styles/_mkto.scss
@@ -208,8 +208,8 @@
     button[type='submit'] {
       background: linear-gradient(to right, rgb(134, 239, 172), rgb(59, 130, 246)) !important;
       background-color: var(--primary-black) !important;
-      font-size: 14px !important;
-      font-family: var(--font-inter) !important;
+      font-size: 16px !important;
+      font-family: var(--font-body) !important;
       font-weight: 600;
     }
 
@@ -222,7 +222,7 @@
       color: var(--primary-black);
       display: inline-flex;
       font-family: var(--font-heading);
-      font-size: 0.875rem;
+      font-size: 1rem !important;
       font-weight: 600;
       height: 50px;
       justify-content: center;
