fixed download button issues

--- a/src/components/ui/DownloadForm/styles.module.scss
+++ b/src/components/ui/DownloadForm/styles.module.scss
@@ -67,6 +67,7 @@
     animation: waveGradient 5s ease-in-out infinite;
   }
   padding: 10px 16px;
+  cursor: pointer;
   a {
     text-decoration: none;
     color: white;
