--- a/src/components/pages/DesktopNew/Template/styles.module.scss
+++ b/src/components/pages/DesktopNew/Template/styles.module.scss
@@ -1,10 +1,7 @@
-@import '/src/styles/variables';
-@import '~bootstrap/scss/mixins';
+@import "/src/styles/variables";
+@import "~bootstrap/scss/mixins";
 
 .template {
-  // background-image: url("/images/new-gradient.png");
-  // background-size: cover;
-  // background-position: center center;
   background-color: var(--primary-black);
   display: flex;
   min-height: calc(100vh - 200px);
@@ -13,8 +10,15 @@
   position: relative;
 
   background:
-    linear-gradient(to bottom, transparent 40%, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0) 80%, transparent 80%), url('/images/new-gradient.png');
-  background-size: 100% 80%; 
+    linear-gradient(
+      to bottom,
+      transparent 40%,
+      rgba(0, 0, 0, 0) 40%,
+      rgba(0, 0, 0, 0) 80%,
+      transparent 80%
+    ),
+    url("/images/new-gradient.webp");
+  background-size: 100% 80%;
   background-position: top center;
   background-repeat: no-repeat;
   @include media-breakpoint-down(sm) {
