--- a/src/components/ui/footer/styles.module.scss
+++ b/src/components/ui/footer/styles.module.scss
@@ -1,5 +1,5 @@
-@import '/src/styles/variables';
-@import '~bootstrap/scss/mixins';
+@import "/src/styles/variables";
+@import "~bootstrap/scss/mixins";
 
 .footer {
   background: #000;
