--- a/src/components/ui/DownloadForm/styles.module.scss
+++ b/src/components/ui/DownloadForm/styles.module.scss
@@ -1,5 +1,5 @@
-@import '/src/styles/variables';
-@import '~bootstrap/scss/mixins';
+@import "/src/styles/variables";
+@import "~bootstrap/scss/mixins";
 
 .list {
   display: flex;
@@ -14,6 +14,7 @@
   display: flex;
   gap: 18px;
   justify-content: space-between;
+  align-items: center;
   padding-bottom: 24px;
   border-bottom: 1px solid #374151;
 }
@@ -52,7 +53,12 @@
   width: 115px;
   height: fit-content;
   border-radius: 8px;
-  background: linear-gradient(to right, rgb(134, 239, 172), rgb(59, 130, 246), rgb(134, 239, 172));
+  background: linear-gradient(
+    to right,
+    rgb(134, 239, 172),
+    rgb(59, 130, 246),
+    rgb(134, 239, 172)
+  );
   box-shadow:
     0px 0px 20px 12px rgba(52, 211, 153, 0.5),
     0px 0px 4px 2px rgba(52, 211, 153, 0.8);
