--- a/src/styles/_mkto.scss
+++ b/src/styles/_mkto.scss
@@ -35,7 +35,7 @@
     float: none !important;
     margin: 0 !important;
     width: 100% !important;
-    input[type='checkbox'] {
+    input[type="checkbox"] {
       width: fit-content !important;
     }
     a {
@@ -65,11 +65,11 @@
       display: none;
     }
 
-    &:has(input[type='hidden']) {
+    &:has(input[type="hidden"]) {
       display: none;
     }
 
-    &:has(input[type='email'], input[name='Email']) {
+    &:has(input[type="email"], input[name="Email"]) {
       order: 1;
 
       input {
@@ -78,7 +78,12 @@
     }
 
     @include media-breakpoint-up(lg) {
-      &:has(input[name='FirstName'], input[name='LastName'], input[name='Title'], input[name='Company']) {
+      &:has(
+          input[name="FirstName"],
+          input[name="LastName"],
+          input[name="Title"],
+          input[name="Company"]
+        ) {
         order: 2;
         flex: 1 1 calc(50% - 1rem);
 
@@ -87,7 +92,7 @@
         }
       }
 
-      &:has(input[name='Title'], input[name='Company']) {
+      &:has(input[name="Title"], input[name="Company"]) {
         order: 5;
       }
     }
@@ -131,11 +136,11 @@
       }
     }
 
-    input[type='text'],
-    input[type='tel'],
-    input[type='email'],
-    input[type='search'],
-    input[type='url'],
+    input[type="text"],
+    input[type="tel"],
+    input[type="email"],
+    input[type="search"],
+    input[type="url"],
     textarea.mktoField,
     select.mktoField,
     select,
@@ -145,7 +150,6 @@
       border: 1px solid #52525b;
       color: var(--primary-white);
       font-family: var(--font-inter);
-      color: #999999;
       font-size: 14px !important;
       line-height: 1.5;
       outline-offset: 0;
@@ -181,7 +185,11 @@
   }
 
   .downloadButton {
-    background: linear-gradient(to right, rgb(134, 239, 172), rgb(59, 130, 246));
+    background: linear-gradient(
+      to right,
+      rgb(134, 239, 172),
+      rgb(59, 130, 246)
+    );
     border-radius: 6px;
     box-shadow: rgba(134, 239, 172, 0.3) 0px 0px 20px;
     display: flex;
@@ -205,8 +213,12 @@
     display: flex;
     width: 100%;
 
-    button[type='submit'] {
-      background: linear-gradient(to right, rgb(134, 239, 172), rgb(59, 130, 246)) !important;
+    button[type="submit"] {
+      background: linear-gradient(
+        to right,
+        rgb(134, 239, 172),
+        rgb(59, 130, 246)
+      ) !important;
       background-color: var(--primary-black) !important;
       font-size: 16px !important;
       font-family: var(--font-body) !important;
