--- a/src/components/ui/button/styles.module.scss
+++ b/src/components/ui/button/styles.module.scss
@@ -2,6 +2,7 @@
 @import "~bootstrap/scss/mixins";
 
 .button {
+  color: var(--primary-black);
   display: flex;
   padding: 16px 24px;
   justify-content: center;
@@ -14,17 +15,17 @@
   transition: all 0.3s ease;
   font-family: var(--font-body);
   @include media-breakpoint-down(md) {
-  width: 100%;
-  };
+    width: 100%;
+  }
 
   &.border-button {
     border: 2px solid rgba(152, 244, 254, 0.3);
     background: transparent;
     border-radius: 8px;
     background-clip: border-box;
-    color: white;
+    color: var(--primary-white);
     &:hover {
-     opacity: 0.8;
+      opacity: 0.8;
     }
   }
 
@@ -40,12 +41,20 @@
     background-position: 0% 50%;
     border: none;
     opacity: 1;
-    box-shadow: 0px 0px 10px rgba(52, 211, 153, 0.5), 0px 0px 15px rgba(52, 211, 153, 0.6);
-    transition: opacity 0.3s ease-in-out, box-shadow 0.1s ease-in-out;
+    box-shadow:
+      0px 0px 10px rgba(52, 211, 153, 0.5),
+      0px 0px 15px rgba(52, 211, 153, 0.6);
+    transition:
+      opacity 0.3s ease-in-out,
+      box-shadow 0.1s ease-in-out;
     animation: boxShadowAnimation 1.5s infinite alternate;
     &:hover {
       animation: waveGradient 5s ease-in-out infinite;
     }
+  }
+
+  &.filled-button[disabled] {
+    opacity: 0.5;
   }
 
   &:focus {
@@ -54,10 +63,14 @@
 
   @keyframes boxShadowAnimation {
     0% {
-      box-shadow: 0px 0px 10px rgba(52, 211, 153, 0.5), 0px 0px 15px rgba(52, 211, 153, 0.6);
+      box-shadow:
+        0px 0px 10px rgba(52, 211, 153, 0.5),
+        0px 0px 15px rgba(52, 211, 153, 0.6);
     }
     100% {
-      box-shadow: 0px 0px 15px rgba(52, 211, 153, 0.6), 0px 0px 20px rgba(52, 211, 153, 0.7);
+      box-shadow:
+        0px 0px 15px rgba(52, 211, 153, 0.6),
+        0px 0px 20px rgba(52, 211, 153, 0.7);
     }
   }
   @keyframes waveGradient {
