--- a/src/styles/_mkto.scss
+++ b/src/styles/_mkto.scss
@@ -233,7 +233,7 @@
       border-radius: 6px;
       color: var(--primary-black);
       display: inline-flex;
-      font-family: var(--font-heading);
+      font-family: var(--font-body);
       font-size: 1rem !important;
       font-weight: 600;
       height: 50px;
