--- a/src/components/pages/EventsHub/Grid/Card/styles.module.scss
+++ b/src/components/pages/EventsHub/Grid/Card/styles.module.scss
@@ -29,7 +29,7 @@
     margin-top: auto;
     color: var(--primary-white);
     font-weight: 600;
-    font-family: var(--font-heading);
+    font-family: var(--font-body);
     line-height: 1em;
     font-size: 1rem;
     text-transform: uppercase;
