Hide shortcut on mobile

--- a/src/components/ui/Blog/SearchAskField.module.scss
+++ b/src/components/ui/Blog/SearchAskField.module.scss
@@ -7,6 +7,7 @@
 }
 
 .shortcutIndicator {
+  display: none !important;
   position: absolute;
   right: 0.6rem;
   bottom: 0.6rem;
@@ -16,4 +17,8 @@
   border-radius: 4px;
   padding: 2px 6px;
   pointer-events: none; // allow clicks to pass through
+
+  @media (min-width: 1024px) {
+    display: block !important;
+  }
 }
