--- a/src/styles/_blog-article.scss
+++ b/src/styles/_blog-article.scss
@@ -1,7 +1,4 @@
 .blog-article {
-  max-width: 1024px;
-  margin: 0 auto;
-
   p {
     font-size: 1.2rem;
   }
@@ -35,12 +32,16 @@
     }
   }
 
-  .other-posts {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 1rem;
-    @media (min-width: 768px) {
-      grid-template-columns: repeat(2, 1fr);
-    }
+  + section:last-child {
+    margin-bottom: 6rem;
+  }
+}
+
+.other-posts {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 1rem;
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
