Fixing buttons in markdown to support custom styles

--- a/src/components/ui/Display/styles.module.scss
+++ b/src/components/ui/Display/styles.module.scss
@@ -81,7 +81,7 @@ $default-sm-sizes: (
   margin-bottom: 0;
   $display: &;
 
-  a {
+  a:not([class*="button"]) {
     &,
     &:hover,
     &:visited {
