--- a/src/components/ui/button/styles.module.scss
+++ b/src/components/ui/button/styles.module.scss
@@ -14,6 +14,8 @@
   line-height: normal;
   transition: all 0.3s ease;
   font-family: var(--font-body);
+  text-decoration: none !important;
+
   @include media-breakpoint-down(md) {
     width: 100%;
   }
