Refactor Newsletter components and styles to look closer to the rest of the site
- Updated the layout of the Desktop component for cleaner class usage.
- Modified the Template styles to enhance background and layout responsiveness.
- Added a button to the Template for linking to the latest issues of the newsletter.
- Adjusted the heading styles and content alignment in the Template for better visual hierarchy.

--- a/src/components/pages/DesktopNew/Template/styles.module.scss
+++ b/src/components/pages/DesktopNew/Template/styles.module.scss
@@ -2,14 +2,13 @@
 @import "~bootstrap/scss/mixins";
 
 .template {
-  background-color: var(--primary-black);
   display: flex;
   min-height: calc(100vh - 200px);
   flex-direction: column;
   overflow-y: auto;
   position: relative;
-
-  background:
+  background-color: var(--primary-black);
+  background-image:
     linear-gradient(
       to bottom,
       transparent 40%,
