--- a/src/components/pages/Partners/Benefits/styles.module.scss
+++ b/src/components/pages/Partners/Benefits/styles.module.scss
@@ -48,6 +48,46 @@
   }
 }
 
+.header {
+  text-align: center;
+  margin-bottom: 60px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @include media-breakpoint-down(md) {
+    margin-bottom: 40px;
+  }
+}
+
+.title {
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: -0.48px;
+  color: var(--primary-white);
+  margin-bottom: 16px;
+
+  @include media-breakpoint-down(md) {
+    font-size: 38px;
+  }
+}
+
+.description {
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 140%;
+  opacity: 0.8;
+  color: var(--primary-white);
+  text-align: center;
+  max-width: 632px;
+  margin: 0 auto;
+
+  @include media-breakpoint-down(lg) {
+    font-size: 16px;
+  }
+}
+
 
 .grid {
   display: grid;
