--- a/src/components/ui/ContactForm/styles.module.scss
+++ b/src/components/ui/ContactForm/styles.module.scss
@@ -3,7 +3,7 @@
 
 .contact {
   &__title {
-    color: #d4d4d8;
+    color: var(--interface-light-gray-75);
     font-size: 24px !important;
     font-weight: 500 !important;
     font-family: var(--font-inter) !important;
