--- a/src/components/ui/Header/styles.module.scss
+++ b/src/components/ui/Header/styles.module.scss
@@ -36,7 +36,7 @@
       opacity: 0.6;
     }
   }
-  @include media-breakpoint-down(md) {
+  @media (max-width: 850px) {
     display: none;
   }
 }
@@ -170,7 +170,7 @@
     }
   }
 
-  @include media-breakpoint-up(md) {
+  @media (min-width: 851px) {
     display: none;
   }
 }
