--- a/src/components/pages/ContactUs/Template/styles.module.scss
+++ b/src/components/pages/ContactUs/Template/styles.module.scss
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   margin-top: var(--spacer-6);
   margin-bottom: var(--spacer-8);
 
