--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,27 +1,24 @@
 @font-face {
   font-family: "Chivo";
   font-display: swap;
-  src: url("./fonts/Chivo/Chivo-VariableFont_wght.ttf") format("truetype");
+  font-weight: 100 900;
+  src: url("./fonts/Chivo/Chivo-VariableFont_wght.ttf")
+    format("truetype-variations");
 }
 
 @font-face {
   font-family: "Chivo";
   font-display: swap;
   font-style: italic;
-  src: url("./fonts/Chivo/Chivo-Italic-VariableFont_wght.ttf") format("truetype");
+  font-weight: 100 900;
+  src: url("./fonts/Chivo/Chivo-Italic-VariableFont_wght.ttf")
+    format("truetype-variations");
 }
 
 @font-face {
   font-family: "SF";
   font-display: swap;
   src: url("./fonts/sf-pro-display/SFPRODISPLAYREGULAR.OTF") format("truetype");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-weight: 500;
-  font-display: swap;
-  src: url("./fonts/Inter/static/Inter_18pt-Medium.ttf") format("truetype");
 }
 
 @font-face {
@@ -33,6 +30,13 @@
 
 @font-face {
   font-family: "Inter";
+  font-weight: 500;
+  font-display: swap;
+  src: url("./fonts/Inter/static/Inter_18pt-Medium.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Inter";
   font-weight: 600;
   font-display: swap;
   src: url("./fonts/Inter/static/Inter_18pt-SemiBold.ttf") format("truetype");
@@ -40,15 +44,43 @@
 
 @font-face {
   font-family: "JetBrains Mono";
-  font-weight: 700;
+  font-weight: 100 800;
   font-display: swap;
-  src: url("./fonts/JetBrains/JetBrainsMono-VariableFont_wght.ttf") format("truetype");
+  src: url("./fonts/JetBrains/JetBrainsMono-VariableFont_wght.ttf")
+    format("truetype-variations");
 }
 
-$font-body: "Chivo", sans-serif;
-$font-sf: "SF", sans-serif;
-$font-inter: "Inter", sans-serif;
-$font-jet-brains: "JetBrains Mono", sans-serif;
+// Optimized font stacks with better fallbacks
+$font-body:
+  "Chivo",
+  -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  Roboto,
+  "Helvetica Neue",
+  Arial,
+  sans-serif;
+$font-sf:
+  "SF",
+  -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  Roboto,
+  "Helvetica Neue",
+  Arial,
+  sans-serif;
+$font-inter:
+  "Inter",
+  -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  Roboto,
+  "Helvetica Neue",
+  Arial,
+  sans-serif;
+$font-jet-brains:
+  "JetBrains Mono", "SF Mono", Monaco, Inconsolata, "Roboto Mono",
+  "Droid Sans Mono", "Courier New", monospace;
 
 $font-all: (
   "font-body": $font-body,
